--- a/css/reset.css
+++ b/css/reset.css
@@ -8,7 +8,6 @@ body,
 h1,
 h2,
 h3,
-p,
 dl,
 dt,
 dd,
@@ -21,6 +20,7 @@ li {
   color: #333;
   font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "メイリオ",
     "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif;
+  background-color: #f7f7f7;
 }
 
 a {
