--- a/css/style.css
+++ b/css/style.css
@@ -32,20 +32,24 @@
 }
 
 .HeaderMenu_pcnav ul li {
-  text-align: center;
   background-color: #fff;
+  text-align: center;
 }
+
 .button-icon {
   display: flex;
   width: 16px;
   max-width: 33px;
-  background-color: #fff;
+  background: #fff;
   border-radius: 50%;
   padding: 10px 8px 10px 8px;
   margin-right: 4px;
 }
 
-.icon-button {
+.hedaer_contact {
+  background: #fff;
+}
+.header_contact a {
   display: flex;
   max-width: 180px;
   align-items: center;
@@ -410,28 +414,44 @@
 .slick-prev {
   left: 3%;
   z-index: 99;
+  width: 71px;
+  height: 71px;
+  border-radius: 50%;
+  border: 4px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 22px;
 }
 .slick-next {
   right: 3%;
+  width: 71px;
+  height: 71px;
+  border-radius: 50%;
+  border: 4px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 22px;
 }
 
 .slick-next:before {
   content: "";
   display: block;
-  width: 20px;
-  height: 20px;
-  border-top: 3px solid white;
-  border-right: 3px solid white;
+  width: 31px;
+  height: 31px;
+  border-top: 4px solid white;
+  border-right: 4px solid white;
   transform: rotate(45deg);
 }
 
 .slick-prev:before {
   content: "";
   display: block;
-  width: 20px;
-  height: 20px;
-  border-top: 3px solid white;
-  border-right: 3px solid white;
+  width: 31px;
+  height: 31px;
+  border-top: 4px solid white;
+  border-right: 4px solid white;
   transform: rotate(-135deg);
 }
 
@@ -454,9 +474,13 @@
   align-items: center;
 }
 
-.slick-dots li button:before {
-  margin-top: 32px;
-  font-size: 14px;
+.slick-dots {
+  bottom: -56px;
+  font-size: 4px;
+}
+
+.slick-dots li {
+  margin: 0 20px;
 }
 
 .works-button {
@@ -467,7 +491,7 @@
   height: 70px;
   background-color: #ff853c;
   align-items: center;
-  margin: 80px auto 385px;
+  margin: 76px auto 385px;
   padding: 0;
 }
 
@@ -503,4 +527,153 @@
   border-right: 2px solid white;
   transform: rotate(45deg);
   margin-right: 4px;
+}
+
+.contact_text {
+  text-align: center;
+  position: relative;
+}
+
+.contact_text1 {
+  font-size: 26px;
+  color: #ff853c;
+  font-family: serif;
+  font-weight: bold;
+}
+
+.contact_text2 {
+  font-size: 40px;
+  color: #ff853c;
+  font-family: serif;
+  font-weight: bold;
+  margin-bottom: 95px;
+}
+
+.contact_circle {
+  background: radial-gradient(circle, #ff853c, #ff853c60);
+  filter: blur(40px);
+  position: absolute;
+  top: -3%;
+  left: 51%;
+  width: 123px;
+  height: 123px;
+  border-radius: 50%;
+}
+
+.contact_Information {
+  margin: 0 auto 104px 16%;
+  font-size: 16px;
+  line-height: 1.75;
+}
+
+.contact_inquiry {
+  margin: 0 auto 46px 16%;
+}
+
+.contact_inquiry label {
+  font-size: 16px;
+  display: flex;
+}
+
+#name,
+#address {
+  width: 948px;
+  height: 70px;
+  text-align: center;
+  border: solid white;
+  border-radius: 8px;
+}
+
+#details {
+  width: 948px;
+  height: 534px;
+  text-align: center;
+  border: solid white;
+  border-radius: 8px;
+}
+
+.contact_button {
+  background: #ff853c;
+  width: 386px;
+  height: 70px;
+  border: none;
+  margin: 0 auto 160px auto;
+  border-radius: 8px;
+}
+
+.contact_button_text {
+  font-size: 24px;
+  font-weight: bold;
+  border: none;
+  background: none;
+  color: #fff;
+  margin: 20px 36%;
+}
+
+.Footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 88px 8% 122px;
+  box-sizing: border-box;
+  background: linear-gradient(to right, #e9bfb6, #8a9cb6);
+  width: 100%;
+  height: 276px;
+}
+
+.footer_logo {
+  width: 129px;
+}
+
+.FooterMenu_pcnav {
+  font-weight: bold;
+}
+
+.FooterMenu_pcnav ul {
+  display: flex;
+  align-items: center;
+  gap: 68px;
+  background: linear-gradient(to right, #e9bfb6, #8a9cb6);
+}
+
+.FooterMenu_pcnav li {
+  background-color: linear-gradient(to right, #e9bfb6, #8a9cb6);
+  text-align: center;
+}
+
+.footer_button-icon {
+  display: flex;
+  width: 16px;
+  max-width: 33px;
+  background: #ff853c;
+  border-radius: 50%;
+  padding: 10px 8px 10px 8px;
+  margin-right: 4px;
+}
+
+.FooterMenu_pcnav a {
+  color: #fff;
+  background: linear-gradient(to right, #e9bfb6, #8a9cb6);
+}
+
+.footer_contact {
+  border-radius: 35px;
+}
+
+.footer_contact {
+  background: #fff;
+}
+.footer_contact a {
+  display: flex;
+  max-width: 180px;
+  align-items: center;
+  background: #fff;
+  color: #ff853c;
+  border: none;
+  padding: 18px 33px;
+  border-radius: 35px;
+}
+
+footer p {
+  text-align: center;
 }
