--- a/css/home.css
+++ b/css/home.css
@@ -664,18 +664,22 @@ li.works_sub_item {
 }
 #name,
 #address {
-  width: 948px;
+  max-width: 948px;
+  width: 100%;
   height: 70px;
   text-align: center;
   border: solid white;
   border-radius: 8px;
+  box-sizing: border-box;
 }
 #details {
-  width: 948px;
+  max-width: 948px;
+  width: 100%;
   height: 534px;
   text-align: center;
   border: solid white;
   border-radius: 8px;
+  box-sizing: border-box;
 }
 .contact_button {
   background: #ff853c;
