--- a/css/about.css
+++ b/css/about.css
@@ -45,20 +45,6 @@
 .header_about_item {
   position: relative;
 }
-/*header_about_animation*/
-@keyframes header-fade-in2 {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-.about_item {
-  /* .about_itemが「header-fade-in」で状態変化するように指定 */
-  animation-name: header-fade-in2;
-  animation-duration: 1s;
-}
 .about_item {
   color: #fff;
   padding: 10px;
@@ -67,6 +53,7 @@
   position: absolute;
   top: 105%;
   right: 70%;
+  display: none;
 }
 
 /*header_works*/
@@ -84,11 +71,6 @@ li.works_item {
   right: 33%;
 }
 .works_item {
-  /* .works_itemが「header-fade-in」で状態変化するように指定 */
-  animation-name: header-fade-in2;
-  animation-duration: 1s;
-}
-.works_item {
   color: #fff;
   padding: 10px;
   background: #ff853c;
@@ -96,6 +78,7 @@ li.works_item {
   position: absolute;
   top: 105%;
   right: 31%;
+  display: none;
 }
 
 /*header_contact*/
@@ -125,28 +108,122 @@ li.works_sub_item {
   color: #fff;
 }
 /*headerの余白調整*/
-#about,
-#skill,
-#works,
-#contact {
-  padding-top: 112px;
-  margin-top: -112px;
+#aboutme {
+  padding: 182px 0 0 0;
+}
+
+@media screen and (max-width: 1000px) {
+  .HeaderMenu_pcnav ul {
+    gap: 35px;
+  }
+  .header_logo {
+    width: 70px;
+    padding-right: 12px;
+  }
+  .header_about_arrow {
+    left: 104%;
+  }
+  .header_works_arrow {
+    right: 35%;
+  }
 }
 
 /* aboutme */
 .aboutme {
-  max-width: 1000px;
-  margin: 0px auto;
-  padding-top: 202px;
+  overflow: hidden;
 }
 .aboutme_title {
   text-align: center;
-  padding-bottom: 80px;
+  padding-bottom: 64px;
+  font-size: 40px;
+  font-weight: bold;
+  color: #ff853c;
+  font-family: serif;
 }
 .aboutme_contents {
   display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  position: relative;
+  max-width: 1000px;
+  margin: 0px auto;
+  padding: 0 20px 163px;
+}
+img.aboutme_photo {
+  border-radius: 98px;
+  max-width: 440px;
+  width: 44%;
+  z-index: 100;
+}
+.aboutme_text {
+  max-width: 550px;
+  width: 51%;
+  position: relative;
+}
+.aboutme_text1 {
+  font-size: 40px;
+  font-weight: bolder;
+  margin: 10px 0 16px;
+}
+.aboutme_text2 {
+  font-size: 26px;
+  font-family: serif;
+  margin: 0 0 50px;
+}
+.aboutme_text3 {
+  margin: 0 0 40px;
+}
+.aboutme_text4,
+.aboutme_text5,
+.aboutme_text6,
+.aboutme_text7 {
+  line-height: 1.75;
+  margin: 0 0 40px;
+}
+.aboutme_text5 {
+  line-height: 1.75;
+  margin: 0 0 40px;
+}
+.about_circle1 {
+  background: radial-gradient(circle, #fcaf81, #ff853c60);
+  filter: blur(70px);
+  position: absolute;
+  top: -4%;
+  left: -7%;
+  width: 253px;
+  height: 253px;
+  border-radius: 50%;
+}
+@keyframes my-fade-in1 {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.about_circle1 {
+  /* .about_circle1が「my-fade-in」で状態変化するように指定 */
+  animation-name: my-fade-in1;
+  animation-duration: 2s;
 }
 
+.about_circle2 {
+  background: radial-gradient(circle, #99dbf1, #82e0ff60);
+  filter: blur(40px);
+  position: absolute;
+  top: 80%;
+  right: -20%;
+  width: 194px;
+  height: 194px;
+  border-radius: 50%;
+  z-index: -100;
+}
+@media screen and (max-width: 1000px) {
+  .aboutme_text {
+    font-size: 10px;
+  }
+}
 /*footer*/
 footer {
   background: linear-gradient(to right, #e9bfb6, #8a9cb6);
@@ -209,6 +286,21 @@ footer p {
   color: #fff;
 }
 
+@media screen and (max-width: 1000px) {
+  .FooterMenu_pcnav ul {
+    gap: 35px;
+  }
+  .footer_logo {
+    width: 70px;
+    padding-right: 12px;
+  }
+  .footer_about_arrow {
+    left: 104%;
+  }
+  .footer_works_arrow {
+    right: 35%;
+  }
+}
 /*scroll_circle*/
 .scroll_circle {
   opacity: 0;
