--- a/css/style.css
+++ b/css/style.css
@@ -47,27 +47,38 @@
   cursor: pointer;
 }
 /*header_about_animation*/
-@keyframes header-fade-in2 {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+.about_menu {
+  justify-content: space-between;
+  max-width: 590px;
+  margin: 0 auto;
 }
 .about_item {
-  color: #fff;
-  padding: 10px;
+  /* 配置の調節 */
   background: #ff853c;
+  padding: 0 10px;
   border-radius: 8px;
   position: absolute;
-  top: 105%;
-  right: 70%;
-  display: none;
+  top: 50px;
+  flex-direction: column;
+  justify-content: center;
+  height: 0; /* 高さ0で最初は非表示に */
+  overflow: hidden; /* 高さ0からはみ出た中身を隠す */
+  transition: 0.5s; /* ホバー時の動きをゆっくりに */
 }
-
+.about_item li {
+  color: #fff;
+}
+.header_about_item:hover .about_item {
+  height: 41px;
+  padding: 10px;
+}
 /*header_works*/
-li.works_item {
+.works_menu {
+  justify-content: space-between;
+  max-width: 590px;
+  margin: 0 auto;
+}
+.header_works_item {
   position: relative;
 }
 .header_works_arrow {
@@ -78,17 +89,26 @@ li.works_item {
   transform: rotate(135deg);
   position: absolute;
   top: 40%;
-  right: 33%;
+  right: -33%;
 }
 .works_item {
-  color: #fff;
-  padding: 10px;
   background: #ff853c;
+  padding: 0 10px;
   border-radius: 8px;
   position: absolute;
-  top: 105%;
-  right: 31%;
-  display: none;
+  top: 49px;
+  flex-direction: column;
+  justify-content: center;
+  height: 0; /* 高さ0で最初は非表示に */
+  overflow: hidden; /* 高さ0からはみ出た中身を隠す */
+  transition: 0.5s; /* ホバー時の動きをゆっくりに */
+}
+.works_item li {
+  color: #fff;
+}
+.header_works_item:hover .works_item {
+  height: 41px;
+  padding: 10px;
 }
 
 /*header_contact*/
@@ -170,7 +190,7 @@ li.works_sub_item {
 }
 .home_text1 {
   position: absolute;
-  top: 69%;
+  top: 65%;
   left: 17%;
   font-family: serif;
   z-index: 100;
@@ -235,7 +255,7 @@ li.works_sub_item {
   z-index: 100;
 }
 .paper_flight {
-  width: 67%;
+  width: 59%;
   position: relative;
   margin-left: auto;
   overflow: hidden;
@@ -756,7 +776,7 @@ footer {
 .FooterMenu_pcnav ul {
   display: flex;
   align-items: center;
-  gap: 68px;
+  gap: 66px;
 }
 .FooterMenu_pcnav li {
   text-align: center;
@@ -803,4 +823,20 @@ footer p {
 }
 .scroll_circle.is-show {
   opacity: 1;
+}
+
+@media screen and (max-width: 1000px) {
+  .FooterMenu_pcnav ul {
+    gap: 35px;
+  }
+  .footer_logo {
+    width: 70px;
+    padding-right: 12px;
+  }
+  .footer_about_arrow {
+    left: 104%;
+  }
+  .footer_works_arrow {
+    right: 35%;
+  }
 }
