--- a/css/style.css
+++ b/css/style.css
@@ -728,6 +728,7 @@ li.works_sub_item {
   border: solid white;
   border-radius: 8px;
   box-sizing: border-box;
+  font-size: 16px;
 }
 #details {
   width: 100%;
@@ -736,6 +737,8 @@ li.works_sub_item {
   border: solid white;
   border-radius: 8px;
   box-sizing: border-box;
+  font-size: 16px;
+  line-height: 1.75;
 }
 .contact_button {
   background: #ff853c;
@@ -753,7 +756,19 @@ li.works_sub_item {
   color: #fff;
   margin: 20px 36%;
 }
-
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical; /* 縦方向のリサイズを許可 */
+}
+textarea:focus {
+  border-color: #4caf50;
+  outline: none;
+}
 /*footer*/
 footer {
   background: linear-gradient(to right, #e9bfb6, #8a9cb6);
