--- a/css/works_1.css
+++ b/css/works_1.css
@@ -130,7 +130,7 @@ li.works_item {
 .worksmore1_border {
   border-bottom: 1px #333 solid;
   padding-top: 16px;
-  margin-bottom: 16px;
+  margin: 0 10px 16px 10px;
   font-size: 26px;
 }
 .worksmore p {
@@ -164,12 +164,10 @@ li.works_item {
   position: relative;
   padding-bottom: 130px;
 }
-.worksmore_img img {
-  margin: -60px 0 0 0;
-}
 .worksmore_text {
   max-width: 600px;
   margin: 0 auto;
+  padding: 0 10px;
 }
 .worksmore_text div {
   display: flex;
@@ -182,6 +180,7 @@ li.works_item {
 }
 .worksmore_text dd {
   width: 80%;
+  line-height: 1.75;
 }
 .worksmore_point div {
   display: flex;
@@ -201,6 +200,13 @@ li.works_item {
   margin: 0 auto;
   align-items: center;
   padding: 0 10px 130px 10px;
+}
+.worksmore_img_SP {
+  display: flex;
+  justify-content: center;
+}
+.worksmore_lp img {
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3); /* 影を追加 */
 }
 .works_separator {
   display: inline-block; /* インラインで縦棒を表示 */
