--- a/css/style.css
+++ b/css/style.css
@@ -135,12 +135,20 @@ li.works_sub_item {
   padding-top: 112px;
   margin-top: -112px;
 }
+.sp_btn p {
+  display: none;
+}
 @media screen and (max-width: 1100px) {
   .HeaderMenu_pcnav {
     display: none;
   }
   .sp_btn p {
     display: block;
+    color: #ff853c;
+    position: absolute;
+    top: 10px;
+    left: 6px;
+    font-size: 15px;
   }
   .sp_btn {
     display: block;
@@ -150,6 +158,7 @@ li.works_sub_item {
     border: 2px solid #ff853c;
     border-radius: 50%;
     z-index: 100;
+    position: relative;
   }
   .sp_btn span {
     display: block;
@@ -173,87 +182,83 @@ li.works_sub_item {
   }
   .sp_btn.open span::before,
   .sp_btn.open span::after {
-    background-color: #fff;
+    background-color: #ff853c;
   }
   .sp_btn span::before {
     bottom: 8px;
   }
-  .sp_btn span::after {
-    top: 8px;
-  }
-  .sp_btn.open span {
-    background-color: transparent;
-  }
-  .sp_btn.open span::before {
-    bottom: 0;
-    transform: rotate(45deg);
-  }
-  .sp_btn.open span::after {
-    top: 0;
-    transform: rotate(-45deg);
-  }
-  .HeaderMenu_spnav {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(255, 133, 60, 0.5);
-    z-index: 1;
-  }
-  .HeaderMenu_spnav ul li {
-    color: #fff;
-    text-align: center;
-  }
-  .about_menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    gap: 90px;
-    font-size: 18px;
-    font-weight: bold;
-  }
-  .sp_btn {
-    border: 2px solid #fff;
-  }
-  .about_item {
-    /* 配置の調節 */
-    background: #ff853c;
-    text-align: center;
-    padding: 0 10px;
-    border-radius: 8px;
-    position: absolute;
-    top: 50px;
-    flex-direction: column;
-    justify-content: center;
-    height: 0; /* 高さ0で最初は非表示に */
-    overflow: hidden; /* 高さ0からはみ出た中身を隠す */
-    transition: 0.5s; /* ホバー時の動きをゆっくりに */
-  }
-  .header_about_arrow,
-  .header_works_arrow {
-    border-top: 3px solid #fff;
-    border-right: 3px solid #fff;
-  }
-  .header_contact a {
-    background: #fff;
-    color: #ff853c;
-  }
-  .button-icon {
-    background: #ff853c;
-  }
-  .sp_btn p {
-    opacity: 1;
-  }
+}
+
+.sp_btn.open span {
+  background-color: transparent;
+}
+.sp_btn.open span::before {
+  bottom: 0;
+  transform: rotate(45deg);
+}
+.sp_btn.open span::after {
+  top: 0;
+  transform: rotate(-45deg);
+}
+.HeaderMenu_spnav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(255, 133, 60, 0.5);
+  z-index: 1;
+}
+.HeaderMenu_spnav ul li {
+  color: #fff;
+  text-align: center;
+}
+.about_menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  gap: 90px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.sp_btn {
+  border: 2px solid #ff853c;
+}
+.about_item {
+  /* 配置の調節 */
+  background: #ff853c;
+  text-align: center;
+  padding: 0 10px;
+  border-radius: 8px;
+  position: absolute;
+  top: 50px;
+  flex-direction: column;
+  justify-content: center;
+  height: 0; /* 高さ0で最初は非表示に */
+  overflow: hidden; /* 高さ0からはみ出た中身を隠す */
+  transition: 0.5s; /* ホバー時の動きをゆっくりに */
+}
+.header_about_arrow,
+.header_works_arrow {
+  border-top: 3px solid #fff;
+  border-right: 3px solid #fff;
+}
+.header_contact a {
+  background: #fff;
+  color: #ff853c;
+}
+.button-icon {
+  background: #ff853c;
 }
 .HeaderMenu_spnav {
   display: none;
 }
-.sp_btn p {
-  opacity: 0;
+.sp_btn.open p {
+  display: none;
 }
+
 /*FV*/
 .home {
   display: flex;
