--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,9 @@ li.works_sub_item {
     z-index: 100;
     position: relative;
   }
+  .sp_btn.open {
+    border: 2px solid #fff;
+  }
   .sp_btn span {
     display: block;
     width: 30px;
@@ -182,7 +185,7 @@ li.works_sub_item {
   }
   .sp_btn.open span::before,
   .sp_btn.open span::after {
-    background-color: #ff853c;
+    background-color: #fff;
   }
   .sp_btn span::before {
     bottom: 8px;
@@ -220,11 +223,8 @@ li.works_sub_item {
   justify-content: center;
   height: 100%;
   gap: 90px;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
-}
-.sp_btn {
-  border: 2px solid #ff853c;
 }
 .about_item {
   /* 配置の調節 */
@@ -240,17 +240,36 @@ li.works_sub_item {
   overflow: hidden; /* 高さ0からはみ出た中身を隠す */
   transition: 0.5s; /* ホバー時の動きをゆっくりに */
 }
-.header_about_arrow,
-.header_works_arrow {
+.sp_header_about_arrow,
+.sp_header_works_arrow {
   border-top: 3px solid #fff;
   border-right: 3px solid #fff;
+  width: 7px;
+  height: 7px;
+  transform: rotate(135deg);
+  position: absolute;
+  top: 30%;
+  left: 107%;
 }
-.header_contact a {
+.sp_header_contact a {
   background: #fff;
   color: #ff853c;
+  display: flex;
+  max-width: 180px;
+  align-items: center;
+  border: none;
+  border-radius: 35px;
+  padding: 18px 33px;
 }
-.button-icon {
+
+.sp_button-icon {
   background: #ff853c;
+  display: flex;
+  width: 16px;
+  max-width: 33px;
+  border-radius: 50%;
+  padding: 10px 8px 10px 8px;
+  margin-right: 4px;
 }
 .HeaderMenu_spnav {
   display: none;
@@ -450,6 +469,10 @@ li.works_sub_item {
     top: 44%;
     left: 26%;
   }
+  body {
+    height: 100%;
+    overflow: hidden;
+  }
 }
 @media (max-width: 768px) {
   .home_text {
@@ -601,7 +624,7 @@ li.works_sub_item {
   .sp_about_photo1 {
     display: block;
     width: 100%;
-    height: 256px;
+    height: 400px;
     object-fit: cover;
   }
   .about_text1 {
